// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input snapshot renders 1`] = `
<div
  className="MuiFormControl-root-27 RawInput-formControl-2"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="RawInput-inputAndIcon-4"
  >
    <div
      className="MuiInput-root-31 RawInput-inputRoot-3 MuiInput-formControl-32 MuiInput-underline-35"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-39"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value="hi"
      />
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-44"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders alignment 1`] = `
<div
  className="MuiFormControl-root-27 RawInput-formControl-2"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="RawInput-inputAndIcon-4"
  >
    <div
      className="MuiInput-root-74 RawInput-inputRoot-3 MuiInput-formControl-75 MuiInput-underline-78"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-82 RawInput-right-6 RawInput-size4-11"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value="hi"
      />
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-44"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders correct feedback 1`] = `
<div
  className="MuiFormControl-root-27 RawInput-formControl-2"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="RawInput-inputAndIcon-4"
  >
    <div
      className="MuiInput-root-48 RawInput-inputRoot-3 MuiInput-formControl-49 MuiInput-underline-52"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-56"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value="hi"
      />
    </div>
    <div
      className="RawInput-icon-5"
    >
      <div
        data-name="Correct"
      >
        {"feedback":"fb"}
      </div>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-44"
  >
    
  </p>
</div>
`;

exports[`input snapshot renders disabled 1`] = `
<div
  className="MuiFormControl-root-27 RawInput-formControl-2"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="RawInput-inputAndIcon-4"
  >
    <div
      className="MuiInput-root-61 RawInput-inputRoot-3 MuiInput-disabled-64 MuiInput-formControl-62 MuiInput-underline-65"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-69 MuiInput-disabled-64"
        defaultValue={undefined}
        disabled={true}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value="hi"
      />
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-44 MuiFormHelperText-disabled-46"
  >
    
  </p>
</div>
`;
